# MoneyRaven

./: Cargo.toml
src/: argparser.rs  commands.rs  config.rs  main.rs  platform.rs
src/core/: Cargo.toml  accounting.rs  db.rs  lib.rs
src/core/src/: db.rs
