[package]
name = "raven-core"
version = "0.1.0"
authors = ["Gabriel Dos Ramos Albo <dosramosgabriel@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
sled = "0.34.6"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }